hphp/test/zend/bad/ext/spl/tests/bug54291.php
<?php
$dir = new DirectoryIterator("\x00/abc");
$dir->isFile();